--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,16 @@ services:
   frontend:
     build:
       context: ./frontend
-      args:
-        - BUILD_COMMAND=npm run build:prod
     ports:
       - "4200:80"
     depends_on:
       - backend
-    command: nginx -g 'daemon off;'
 
   backend:
     build:
       context: ./backend
-      args:
-        - BUILD_COMMAND=dotnet publish -c Release -o out
     ports:
-      - "3000:3000"
+      - "3000:80"
     depends_on:
       - database
       - minio
@@ -28,7 +23,10 @@ services:
       - MinIO__AccessKey=minioadmin
       - MinIO__SecretKey=minioadmin
       - MinIO__BucketName=uploads
-    command: dotnet out/YourApp.dll
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - Logging__LogLevel__Default=Debug
+      - Logging__LogLevel__Microsoft.EntityFrameworkCore=Information
 
   database:
     image: postgres:15
