--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
     build:
       context: ./backend
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - database
       - minio
@@ -27,13 +27,13 @@ services:
       - MinIO__SecretKey=minioadmin
       - MinIO__BucketName=uploads
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:3000
       - Jwt__Key=your-super-secret-jwt-key-here
       - Jwt__Issuer=https://vtobackend.marthand.org
       - Jwt__Audience=https://vtobackend.marthand.org
       - API_BASE_URL=https://vtobackend.marthand.org
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -45,6 +45,8 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=appdb
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
