--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,6 +23,7 @@ services:
       - MinIO__SecretKey=minioadmin
       - MinIO__BucketName=uploads
       - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_URLS=http://+:8080
       - Jwt__Key=your-super-secret-jwt-key-here
       - Jwt__Issuer=https://vtobackend.marthand.org
       - Jwt__Audience=https://vtobackend.marthand.org
@@ -33,6 +34,9 @@ services:
       - traefik.http.routers.vtobackend.entrypoints=websecure
       - traefik.http.routers.vtobackend.tls.certresolver=letsencrypt
       - traefik.http.services.vtobackend.loadbalancer.server.port=8080
+      - traefik.docker.network=coolify-overlay
+    networks:
+      - coolify-overlay
     restart: unless-stopped
 
   database:
@@ -58,3 +62,7 @@ services:
 volumes:
   postgres_data:
   minio_data:
+
+networks:
+  coolify-overlay:
+    external: true
