--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/gsap": "^3.0.0",
     "typescript": "~5.4.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
