--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,16 @@ services:
       - app_data:/data
     command: server /data --console-address ":9001"
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - database
+    restart: unless-stopped
+
 volumes:
   app_data:
