--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -52,6 +52,15 @@ services:
     command: server /data --console-address ":9001"
     restart: unless-stopped
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    depends_on:
+      - database
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   minio_data:
