--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       - MinIO__BucketName=uploads
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5010
+      - Jwt__Key=your-super-secret-jwt-key-here-with-256-bits-minimum-length
+      - Jwt__Issuer=http://localhost:5010
+      - Jwt__Audience=http://localhost:5010
       - Logging__LogLevel__Default=Debug
       - Logging__LogLevel__Microsoft.EntityFrameworkCore=Information
 
