--- a/backend/Backend.csproj
+++ b/backend/Backend.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Minio" Version="6.0.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
