--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,11 @@ services:
     depends_on:
       - database
       - minio
+      - redis
     environment:
       - ConnectionStrings__DefaultConnection=Host=database;Database=appdb;Username=user;Password=password
+      - ConnectionStrings__Redis=redis:6379
+      - Redis__InstanceName=vto
       - MinIO__Endpoint=minio:9000
       - MinIO__AccessKey=minioadmin
       - MinIO__SecretKey=minioadmin
@@ -54,6 +57,14 @@ services:
       - app_data:/data
     command: server /data --console-address ":9001"
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+
   pgadmin:
     image: dpage/pgadmin4:latest
     environment:
@@ -67,3 +78,4 @@ services:
 
 volumes:
   app_data:
+  redis_data:
